Rename Model to DTO
