# school-manager-server/src/main/java/com/hillel/multi/presentation/controllers/HomeworkManagerController.java
@@ -1,7 +1,7 @@
 package com.hillel.multi.presentation.controllers;
 
 import com.hillel.api.HomeworkManagerApi;
-import com.hillel.model.HomeworkModel;
+import com.hillel.model.HomeworkDTO;
 import com.hillel.multi.service.HomeworkManagerService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
@@ -17,20 +17,20 @@ public class HomeworkManagerController implements HomeworkManagerApi {
     private HomeworkManagerService homeworkManagerService;
 
     @Override
-    public ResponseEntity<List<HomeworkModel>> getHomework(String group, String subject) {
-        List<HomeworkModel> homeworkModels = homeworkManagerService.getHomework(group, subject);
-        return new ResponseEntity<>(homeworkModels, HttpStatus.OK);
+    public ResponseEntity<List<HomeworkDTO>> getHomework(String group, String subject) {
+        List<HomeworkDTO> homeworkDTOS = homeworkManagerService.getHomework(group, subject);
+        return new ResponseEntity<>(homeworkDTOS, HttpStatus.OK);
     }
 
     @Override
-    public ResponseEntity<HomeworkModel> addHomework(HomeworkModel homeworkModel) {
-        HomeworkModel body = homeworkManagerService.addHomework(homeworkModel);
+    public ResponseEntity<HomeworkDTO> addHomework(HomeworkDTO homeworkDto) {
+        HomeworkDTO body = homeworkManagerService.addHomework(homeworkDto);
         return new ResponseEntity<>(body, HttpStatus.CREATED);
     }
 
     @Override
-    public ResponseEntity<HomeworkModel> updateHomework(Integer id, HomeworkModel homeworkModel) {
-        HomeworkModel body = homeworkManagerService.updateHomework(id, homeworkModel);
+    public ResponseEntity<HomeworkDTO> updateHomework(Integer id, HomeworkDTO homeworkDto) {
+        HomeworkDTO body = homeworkManagerService.updateHomework(id, homeworkDto);
         return new ResponseEntity<>(body, HttpStatus.OK);
     }
 }
