# school-manager-server/src/main/java/com/hillel/multi/presentation/controllers/StudentsManagerController.java
@@ -2,7 +2,7 @@ package com.hillel.multi.presentation.controllers;
 
 import com.hillel.api.StudentsManagerApi;
 import com.hillel.model.MessageModel;
-import com.hillel.model.StudentModel;
+import com.hillel.model.StudentDTO;
 import com.hillel.multi.service.StudentsManagerService;
 import com.hillel.multi.service.utils.CallbackHandler;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -26,20 +26,20 @@ public class StudentsManagerController implements StudentsManagerApi {
     private final static String SUCCESS_MSG = "Student was successfully created";
 
     @Override
-    public ResponseEntity<List<StudentModel>> getStudents() {
-        List<StudentModel> studentModels = studentsManagerService.getStudents();
-        return new ResponseEntity<>(studentModels, HttpStatus.OK);
+    public ResponseEntity<List<StudentDTO>> getStudents() {
+        List<StudentDTO> studentDTOS = studentsManagerService.getStudents();
+        return new ResponseEntity<>(studentDTOS, HttpStatus.OK);
     }
 
     @Override
-    public ResponseEntity<StudentModel> getStudentById(Integer id) {
-        StudentModel studentModel = studentsManagerService.getStudentById(id);
-        return ResponseEntity.ok(studentModel);
+    public ResponseEntity<StudentDTO> getStudentById(Integer id) {
+        StudentDTO studentDTO = studentsManagerService.getStudentById(id);
+        return ResponseEntity.ok(studentDTO);
     }
 
     @Override
-    public ResponseEntity<StudentModel> createStudent(StudentModel studentModel, URI xCallbackUrl) {
-        StudentModel body = studentsManagerService.addStudent(studentModel);
+    public ResponseEntity<StudentDTO> createStudent(StudentDTO studentDTO, URI xCallbackUrl) {
+        StudentDTO body = studentsManagerService.addStudent(studentDTO);
         if (Objects.nonNull(xCallbackUrl)) {
             MessageModel message = new MessageModel();
             message.setText(SUCCESS_MSG);
@@ -49,8 +49,8 @@ public class StudentsManagerController implements StudentsManagerApi {
     }
 
     @Override
-    public ResponseEntity<StudentModel> updateStudent(Integer id, StudentModel studentModel) {
-        StudentModel body = studentsManagerService.updateStudent(id, studentModel);
+    public ResponseEntity<StudentDTO> updateStudent(Integer id, StudentDTO studentDTO) {
+        StudentDTO body = studentsManagerService.updateStudent(id, studentDTO);
         return new ResponseEntity<>(body, HttpStatus.OK);
     }
 }
