# school-manager-server/src/main/java/com/hillel/multi/service/StudentsManagerService.java
@@ -1,6 +1,6 @@
 package com.hillel.multi.service;
 
-import com.hillel.model.StudentModel;
+import com.hillel.model.StudentDTO;
 import com.hillel.multi.configuration.exceptions.MediaTypeException;
 import com.hillel.multi.configuration.exceptions.NotFoundException;
 import org.springframework.stereotype.Service;
@@ -11,11 +11,11 @@ import java.util.Objects;
 @Service
 public class StudentsManagerService {
 
-    public List<StudentModel> getStudents() {
+    public List<StudentDTO> getStudents() {
         return null;
     }
 
-    public StudentModel getStudentById(Integer id) {
+    public StudentDTO getStudentById(Integer id) {
         // Example of using exception
         if (id < 0) {
             throw new NotFoundException("Student with id " + id + " is not found.");
@@ -24,21 +24,21 @@ public class StudentsManagerService {
         return null;
     }
 
-    public StudentModel addStudent(StudentModel studentModel) {
+    public StudentDTO addStudent(StudentDTO studentDTO) {
         // Example of using exception
-        if (Objects.isNull(studentModel.getFirstName())) {
+        if (Objects.isNull(studentDTO.getFirstName())) {
             throw new MediaTypeException("First name can not be null");
         }
 
-        return studentModel;
+        return studentDTO;
     }
 
-    public StudentModel updateStudent(Integer id, StudentModel studentModel) {
+    public StudentDTO updateStudent(Integer id, StudentDTO studentDTO) {
         // Example of using exception
         if (id < 0) {
             throw new NotFoundException("Student with id " + id + " is not found.");
         }
 
-        return studentModel;
+        return studentDTO;
     }
 }
